<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="4dp"
              android:paddingLeft="12dp"
              android:paddingRight="12dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            >

            <TextView
                android:id="@+id/trans_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/withdraw"
                android:textColor="#333333"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/trans_mount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/sample_price"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trans_type"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/chequeNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/chequeNo"
                    android:textColor="#666666"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/narration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:text="@string/narration"
                    android:textColor="#999999"
                    android:textSize="12sp"/>
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

